--- a/project-notebooks/cyber-security.ipynb
+++ b/project-notebooks/cyber-security.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9ad9efaa",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
     "import sqlite3\n",
     "import pandas as pd\n",
     "\n",
-    "# Ajustar rutas para importar módulos del src\n",
+    "# Ajustamos las rutas para importar módulos del src\n",
     "current_dir = os.getcwd()\n",
     "src_path = os.path.join(os.path.dirname(current_dir), 'src')\n",
     "sys.path.append(src_path)\n",
@@ -70,7 +70,7 @@
     "    generar_token_seguro\n",
     ")\n",
     "\n",
-    "print(f\"✅ Módulos de seguridad cargados desde: {src_path}\")"
+    "print(f\"[*] Módulos de seguridad cargados desde: {src_path}\")"
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9a06d705",
    "metadata": {},
    "outputs": [
@@ -112,8 +112,8 @@
     "# 1. Generar Hash\n",
     "hash_seguro = hashear_password(password_real)\n",
     "\n",
-    "print(f\"🔒 Contraseña Original: '{password_real}'\")\n",
-    "print(f\"🛡️ Lo que se guarda en BBDD (Scrypt):\")\n",
+    "print(f\"[*] Contraseña Original: '{password_real}'\")\n",
+    "print(f\"[*] Lo que se guarda en BBDD (Scrypt):\")\n",
     "print(f\"   {hash_seguro}\")\n",
     "print(\"-\" * 60)\n",
     "\n",
@@ -130,7 +130,7 @@
     "print(\"Prueba de aleatoriedad (Salt):\")\n",
     "print(f\"Hash 1: {hash_seguro[:20]}...\")\n",
     "print(f\"Hash 2: {hash_seguro_2[:20]}...\")\n",
-    "print(\"✅ Conclusión: Incluso si dos usuarios tienen la misma contraseña, sus hashes son distintos.\")"
+    "print(\"[*] Conclusión: Incluso si dos usuarios tienen la misma contraseña, sus hashes son distintos.\")"
    ]
   },
   {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8e202b11",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
     "conn = sqlite3.connect(db_path)\n",
     "cursor = conn.cursor()\n",
     "\n",
-    "print(\"🕵️‍♂️ SIMULACIÓN DE ROBO DE DATOS (SQL RAW):\")\n",
+    "print(\"[*] SIMULACIÓN DE ROBO DE DATOS (SQL RAW):\")\n",
     "print(\"-\" * 60)\n",
     "\n",
     "try:\n",
@@ -190,7 +190,7 @@
     "        print(f\"Email (Cifrado):  {row['email']}\")\n",
     "        print(\".\" * 40)\n",
     "        \n",
-    "    print(\"\\n✅ Conclusión: Los datos robados son inútiles sin la clave maestra.\")\n",
+    "    print(\"\\n[*]Conclusión: Los datos robados son inútiles sin la clave maestra.\")\n",
     "    \n",
     "except Exception as e:\n",
     "    print(f\"Error leyendo BBDD: {e}\")\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "07b56467",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
    ],
    "source": [
     "# Ahora actuamos como la aplicación legítima usando la clave maestra\n",
-    "print(\"🔓 ACCESO LEGÍTIMO (APP):\")\n",
+    "print(\"[*] ACCESO LEGÍTIMO (APP):\")\n",
     "print(\"-\" * 60)\n",
     "\n",
     "# Tomamos el primer nombre cifrado del ejemplo anterior\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c37aec12",
    "metadata": {},
    "outputs": [
@@ -273,16 +273,16 @@
     "\n",
     "# 1. Creamos el \"Fingerprint\" (Resumen único del documento)\n",
     "documento_fingerprint = f\"DOC:INFORME|ID:{incidencia_id}|CLI:{cliente_id}|DATE:{fecha}|STATUS:{estado}\"\n",
-    "print(f\"📄 Huella del documento: {documento_fingerprint}\")\n",
+    "print(f\"[*] Huella del documento: {documento_fingerprint}\")\n",
     "\n",
     "# 2. Firmamos con la Clave Privada (Solo el servidor la tiene)\n",
     "firma = firmar_digitalmente(documento_fingerprint.encode('utf-8'))\n",
     "\n",
-    "print(f\"\\n✍️ FIRMA DIGITAL GENERADA (RSA-2048):\")\n",
+    "print(f\"\\n[*] FIRMA DIGITAL GENERADA (RSA-2048):\")\n",
     "print(f\"{firma[:100]}...\") # Mostramos solo el principio\n",
     "print(f\"(Longitud total: {len(firma)} caracteres hexadecimales)\")\n",
     "\n",
-    "print(\"\\n✅ Esta firma es matemáticamente imposible de generar sin la Clave Privada de GeSAI.\")"
+    "print(\"\\n[*]Esta firma es matemáticamente imposible de generar sin la Clave Privada de GeSAI.\")"
    ]
   }
  ],
