--- a/project-notebooks/model-training.ipynb
+++ b/project-notebooks/model-training.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d01a256d",
    "metadata": {},
    "outputs": [
@@ -166,23 +166,21 @@
     }
    ],
    "source": [
-    "print(\"--- 2. Carga Distribuida y Muestreo ---\")\n",
-    "\n",
     "try:\n",
-    "    # 1. Cargar puntero Dask (Lazy load)\n",
+    "    # Cargamos puntero Dask (Lazy load)\n",
     "    df_dask_full = dd.read_parquet(FINAL_DATASET_PATH)\n",
     "    \n",
-    "    # 2. Asegurar formato de fecha\n",
+    "    # Aseguramos formato de fecha\n",
     "    df_dask_full['FECHA'] = dd.to_datetime(df_dask_full['FECHA'])\n",
     "    \n",
-    "    # 3. APLICAR FILTRO DE FECHAS (Paso 1: Seleccionar el periodo correcto)\n",
+    "    # Aplicamos filtro temporal (Paso 1: Reducir volumen inicial)\n",
     "    print(f\"Filtrando periodo: {TRAIN_START_DATE} a {TRAIN_END_DATE}...\")\n",
     "    df_dask_window = df_dask_full[\n",
     "        (df_dask_full['FECHA'] >= TRAIN_START_DATE) & \n",
     "        (df_dask_full['FECHA'] <= TRAIN_END_DATE)\n",
     "    ]\n",
     "    \n",
-    "    # 4. APLICAR SUBSAMPLING (Paso 2: Reducir volumen para la RAM)\n",
+    "    # Aplicamos muestreo si es necesario para evitar problemas de memoria\n",
     "    if SUBSAMPLE_PERCENT < 1.0:\n",
     "        print(f\"Aplicando muestreo del {SUBSAMPLE_PERCENT:.0%} sobre el periodo seleccionado...\")\n",
     "        # .sample() en Dask es distribuido y eficiente\n",
@@ -190,16 +188,16 @@
     "    else:\n",
     "        df_dask_final = df_dask_window\n",
     "    \n",
-    "    # 5. CONSOLIDACIÓN EN RAM (Ahora sí es seguro hacer .compute())\n",
+    "    # Consolidamos en RAM (final compute)\n",
     "    df = df_dask_final.compute()\n",
     "    \n",
-    "    print(f\"✅ Dataset cargado en RAM: {df.shape[0]} filas.\")\n",
+    "    print(f\"* Dataset cargado en RAM: {df.shape[0]} filas.\")\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"ERROR CRÍTICO: {e}\")\n",
     "    exit()\n",
     "\n",
-    "# 6. Ordenamiento cronológico final (Vital para los Lags)\n",
+    "# Ordenamiento cronológico final (Vital para los Lags)\n",
     "print(\"Ordenando datos...\")\n",
     "df['FECHA_HORA_CRONO'] = pd.to_datetime(df['FECHA'].astype(str) + ' ' + df['HORA'].astype(str), errors='coerce')\n",
     "df = df.sort_values(by=[ID_COLUMN, 'FECHA_HORA_CRONO']).reset_index(drop=True)"
@@ -231,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "90abafa2",
    "metadata": {},
    "outputs": [
@@ -244,7 +242,7 @@
     }
    ],
    "source": [
-    "# Definición de Features (Ingeniería de Características)\n",
+    "# Definición de Features (Ingeniería de características)\n",
     "LAG_FEATURES = ['CONSUMO_REAL', 'TEMP_MEDIA', 'PRECIPITACION']\n",
     "LAG_STEPS = [1, 6, 12, 24, 72] \n",
     "\n",
@@ -259,8 +257,7 @@
     "df['CONSUMO_ROLLING_STD_7D'] = df.groupby(ID_COLUMN)['CONSUMO_REAL'].transform(lambda x: x.rolling(WINDOW_SIZE, min_periods=1).std())\n",
     "\n",
     "\n",
-    "# --- *** MEJORA: RATIOS DE DESVIACIÓN (NUEVO) *** ---\n",
-    "# Estas features le gritan al modelo: \"¡Oye, esto es 5 veces más alto de lo normal!\"\n",
+    "# Nuevas features extra: Ratios y diferencias\n",
     "epsilon = 0.001 # Para evitar división por cero\n",
     "df['RATIO_CONSUMO_MEDIA_7D'] = df['CONSUMO_REAL'] / (df['CONSUMO_ROLLING_MEAN_7D'] + epsilon)\n",
     "df['DIFF_CONSUMO_MEDIA_7D'] = df['CONSUMO_REAL'] - df['CONSUMO_ROLLING_MEAN_7D']\n",
@@ -297,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d8fe7cc8",
    "metadata": {},
    "outputs": [
@@ -315,13 +312,7 @@
     }
    ],
    "source": [
-    "# --- 4. Definición de Sets y Formateo Final ---\n",
-    "print(\"\\n--- 4. Definición de Sets y Formateo ---\")\n",
-    "\n",
-    "# 4.1. Definición de X_COLS (Lógica de Sustracción - MÁS SEGURA)\n",
-    "# En lugar de listar qué queremos, listamos qué NO queremos.\n",
-    "# Así, las nuevas features (Ratios, Diffs) entran automáticamente.\n",
-    "\n",
+    "# Definición de COLS_TO_EXCLUDE y X_COLS (Lógica de Sustracción)\n",
     "COLS_TO_EXCLUDE = METADATA_AND_TARGET_COLUMNS + TARGET_COLS + ['FECHA_HORA_CRONO']\n",
     "\n",
     "# X_COLS = Todas las columnas presentes MENOS las excluidas\n",
@@ -330,17 +321,17 @@
     "print(f\"Features finales para el entrenamiento (X): {len(X_COLS)} columnas.\")\n",
     "print(f\"Ejemplo de features incluidas: {X_COLS[-5:]}\") # Verificamos que estén las nuevas\n",
     "\n",
-    "# 4.2. Eliminamos NaNs resultantes del lagging y shifting\n",
+    "# Eliminamos NaNs resultantes del lagging y shifting\n",
     "# Usamos el target más lejano y las nuevas features como referencia\n",
     "df = df.dropna(subset=['TARGET_7DIAS'] + X_COLS) \n",
     "\n",
-    "# 4.3. Definición de Features Categóricas (para LightGBM)\n",
+    "# Definición de features categóricas (para LightGBM)\n",
     "CATEGORICAL_COLS = ['US_AIGUA_SUBM', 'TIPO_DIA'] \n",
     "for col in CATEGORICAL_COLS:\n",
     "    if col in X_COLS:\n",
     "        df[col] = df[col].astype('category')\n",
     "\n",
-    "# 4.4. Aplicando Time-Split Cronológico (80% Train, 20% Test)\n",
+    "# Aplicando Time-Split cronológico (80% train, 20% test)\n",
     "TEST_SIZE_PERCENTAGE = 0.20\n",
     "split_index = int(len(df) * (1 - TEST_SIZE_PERCENTAGE))\n",
     "\n",
@@ -377,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7d60c9c1",
    "metadata": {},
    "outputs": [
@@ -419,7 +410,7 @@
     }
    ],
    "source": [
-    "# 2.6. Entrenamiento del modelo LightGBM (Versión Estable Windows)\n",
+    "# Entrenamiento del modelo LightGBM \n",
     "import gc\n",
     "\n",
     "print(\"---\"*20)\n",
@@ -430,7 +421,7 @@
     "output_dir = '../data/processed-data/'\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "# --- 1. PREPARACIÓN ÚNICA DE LA MATRIZ X ---\n",
+    "# Preparación única de la matriz X\n",
     "print(\"Preparando matriz X única...\")\n",
     "X_base = df_train[X_COLS].copy()\n",
     "\n",
@@ -447,7 +438,7 @@
     "\n",
     "print(f\"Matriz X preparada: {X_base.shape}\")\n",
     "\n",
-    "# --- 2. BUCLE DE ENTRENAMIENTO ---\n",
+    "# Bucle de entrenamiento por cada target\n",
     "for target_col in TARGET_COLS:\n",
     "    print(f\"\\n[PROCESANDO] {target_col}...\")\n",
     "    \n",
@@ -460,20 +451,20 @@
     "    \n",
     "    gc.collect()\n",
     "    \n",
-    "    # --- CONFIGURACIÓN (Corrección de Estabilidad) ---\n",
+    "    # Configuración del modelo LightGBM \n",
     "    lgbm = lgb.LGBMClassifier(\n",
     "        objective='binary',\n",
     "        metric='auc', \n",
     "        is_unbalance=True,\n",
     "        n_estimators=300,\n",
     "        learning_rate=0.05,\n",
-    "        n_jobs=1,  # <--- CRÍTICO: Usar 1 núcleo evita el Access Violation en Windows\n",
+    "        n_jobs=1,  \n",
     "        random_state=42,\n",
     "        verbose=-1,\n",
     "        force_col_wise=True\n",
     "    )\n",
     "    \n",
-    "    # --- ENTRENAMIENTO (Con copias de seguridad) ---\n",
+    "    # ENTRENAMIENTO (Con copias de seguridad) \n",
     "    lgbm.fit(\n",
     "        X_fit.copy(), y_fit.copy(), # Copias explícitas\n",
     "        categorical_feature=[c for c in X_COLS if c in CATEGORICAL_COLS],\n",
@@ -487,7 +478,7 @@
     "    del X_fit, X_val, y_fit, y_val, lgbm\n",
     "    gc.collect()\n",
     "\n",
-    "print(\"\\n✅ Todos los modelos han sido entrenados y guardados.\")"
+    "print(\"\\n* Todos los modelos han sido entrenados y guardados.\")"
    ]
   },
   {
@@ -510,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ca42be56",
    "metadata": {},
    "outputs": [
@@ -620,7 +611,7 @@
     "            best_thresh = thresh\n",
     "            \n",
     "    print(\"-\" * 60)\n",
-    "    print(f\"✅ RECOMENDACIÓN: Usar umbral > {best_thresh} para este horizonte.\")"
+    "    print(f\"*RECOMENDACIÓN: Usar umbral > {best_thresh} para este horizonte.\")"
    ]
   },
   {
