--- a/project-notebooks/prediction-XAI.ipynb
+++ b/project-notebooks/prediction-XAI.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e1b1d895",
    "metadata": {},
    "outputs": [
@@ -70,14 +70,14 @@
     "# Inicializamos JS para las visualizaciones interactivas de SHAP\n",
     "shap.initjs()\n",
     "\n",
-    "# --- RUTAS DEL PROYECTO GESAI ---\n",
+    "# Configuración de rutas\n",
     "MODELS_DIR = '../data/processed-data/'\n",
     "# Usamos el modelo de predicción inmediata (\"HOY\") como referencia\n",
     "MODEL_PATH = '../data/processed-data/lgbm_model_TARGET_HOY.joblib'\n",
     "# Usamos los datos que preparamos para la simulación (ya tienen features calculadas)\n",
     "DATA_PATH = '../data/processed-data/datos_simulacion_features.csv' \n",
     "\n",
-    "print(\"✅ Librerías cargadas y rutas configuradas.\")"
+    "print(\"Librerías cargadas y rutas configuradas.\")"
    ]
   },
   {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4b8468b0",
    "metadata": {},
    "outputs": [
@@ -109,17 +109,15 @@
     }
    ],
    "source": [
-    "print(\"--- Cargando recursos ---\")\n",
-    "\n",
-    "# 1. Cargar Modelo\n",
+    "# Cargamos el modelo entrenado\n",
     "try:\n",
     "    model = joblib.load(MODEL_PATH)\n",
-    "    print(f\"✅ Modelo cargado: {os.path.basename(MODEL_PATH)}\")\n",
+    "    print(f\"Modelo cargado: {os.path.basename(MODEL_PATH)}\")\n",
     "except FileNotFoundError:\n",
-    "    print(\"❌ Error: No se encuentra el modelo. Ejecuta el Notebook 03.\")\n",
+    "    print(\"Error: No se encuentra el modelo. Ejecuta el Notebook 03.\")\n",
     "    raise\n",
     "\n",
-    "# 2. Cargar Datos\n",
+    "# Cargamos datos de simulación\n",
     "try:\n",
     "    df = pd.read_csv(DATA_PATH)\n",
     "    # Recuperar nombres de features del modelo\n",
@@ -128,7 +126,7 @@
     "    # Filtrar solo las columnas que el modelo necesita\n",
     "    X = df[features_modelo].copy()\n",
     "    \n",
-    "    # --- BLOQUE DE LIMPIEZA DE TIPOS (CRÍTICO) ---\n",
+    "    # Limpieza y corrección de tipos de datos\n",
     "    CAT_COLS = ['US_AIGUA_SUBM', 'TIPO_DIA']\n",
     "    \n",
     "    print(\"Limpiando tipos de datos...\")\n",
@@ -145,15 +143,15 @@
     "            # Convertir a número (los errores se vuelven 0.0 o NaN)\n",
     "            X[col] = pd.to_numeric(X[col], errors='coerce').fillna(0.0)\n",
     "            \n",
-    "    print(\"✅ Tipos corregidos: Numéricos convertidos a float.\")\n",
+    "    print(\"Tipos corregidos: Numéricos convertidos a float.\")\n",
     "    # ---------------------------------------------\n",
     "\n",
     "    # Sampling para SHAP\n",
     "    X_sample = X.sample(n=2000, random_state=42)\n",
-    "    print(f\"✅ Datos listos para SHAP: {X_sample.shape}\")\n",
+    "    print(f\"Datos listos para SHAP: {X_sample.shape}\")\n",
     "    \n",
     "except Exception as e:\n",
-    "    print(f\"❌ Error en datos: {e}\")\n",
+    "    print(f\"Error en datos: {e}\")\n",
     "    raise"
    ]
   },
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "3c897ecd",
    "metadata": {},
    "outputs": [
@@ -184,12 +182,10 @@
     }
    ],
    "source": [
-    "print(\"--- Calculando SHAP Values ---\")\n",
-    "\n",
-    "# Crear el explicador\n",
+    "# Creamos el explicador\n",
     "explainer = shap.TreeExplainer(model)\n",
     "\n",
-    "# Calcular valores SHAP para la muestra\n",
+    "# Calculamos los valores SHAP para la muestra\n",
     "shap_values = explainer(X_sample)\n",
     "\n",
     "# En clasificación binaria, seleccionamos la Clase 1 (Fuga)\n",
@@ -197,7 +193,7 @@
     "if len(shap_values.shape) == 3:\n",
     "    shap_values = shap_values[:, :, 1]\n",
     "\n",
-    "print(f\"✅ Valores calculados. Base value: {shap_values.base_values.mean():.4f}\")"
+    "print(f\"Valores calculados. Base value: {shap_values.base_values.mean():.4f}\")"
    ]
   },
   {
@@ -215,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d1459976",
    "metadata": {},
    "outputs": [
@@ -241,14 +237,14 @@
     }
    ],
    "source": [
-    "# 1. SUMMARY PLOT (Impacto y Dirección)\n",
+    "# 1. SUMMARY PLOT (Impacto y dirección)\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.title(\"Impacto de las Variables en la Detección de Fugas\", fontsize=14)\n",
+    "plt.title(\"Impacto de las variables en la detección de fugas\", fontsize=14)\n",
     "shap.summary_plot(shap_values, X_sample, show=True)\n",
     "\n",
-    "# 2. BAR PLOT (Ranking de Importancia)\n",
+    "# 2. BAR PLOT (Ranking de importancia)\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.title(\"Ranking de Importancia (Peso Medio SHAP)\", fontsize=14)\n",
+    "plt.title(\"Ranking de importancia (Peso medio SHAP)\", fontsize=14)\n",
     "shap.plots.bar(shap_values, show=True)"
    ]
   },
@@ -263,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c99a6e34",
    "metadata": {},
    "outputs": [
@@ -290,7 +286,7 @@
     "top_feature_idx = np.abs(shap_values.values).mean(0).argmax()\n",
     "top_feature_name = X_sample.columns[top_feature_idx]\n",
     "\n",
-    "print(f\"--- Análisis profundo de la variable: {top_feature_name} ---\")\n",
+    "print(f\"Análisis profundo de la variable: {top_feature_name}\")\n",
     "\n",
     "# Gráfico de Dependencia\n",
     "shap.plots.scatter(shap_values[:, top_feature_name], color=shap_values)"
@@ -307,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "93e4b686",
    "metadata": {},
    "outputs": [
@@ -333,9 +329,7 @@
     }
    ],
    "source": [
-    "print(\"--- Auditoría de una Alerta Real ---\")\n",
-    "\n",
-    "# 1. Buscamos un caso de Alta Probabilidad en la muestra\n",
+    "# Buscamos un caso de alta probabilidad en la muestra\n",
     "probs = model.predict_proba(X_sample)[:, 1]\n",
     "indices_fuga = np.where(probs > 0.90)[0]\n",
     "\n",
@@ -344,16 +338,16 @@
     "    idx_caso = indices_fuga[0]\n",
     "    prob_caso = probs[idx_caso]\n",
     "    \n",
-    "    print(f\"🔎 Analizando el Caso #{idx_caso}\")\n",
-    "    print(f\"🔴 El modelo predice una probabilidad de fuga del: {prob_caso:.2%}\")\n",
-    "    print(\"👇 Desglose de motivos (Waterfall Plot):\")\n",
+    "    print(f\"Analizando el Caso #{idx_caso}\")\n",
+    "    print(f\"El modelo predice una probabilidad de fuga del: {prob_caso:.2%}\")\n",
+    "    print(\"Desglose de motivos (Waterfall Plot):\")\n",
     "    \n",
     "    # 2. Waterfall Plot\n",
     "    # Muestra cómo cada variable empuja el riesgo desde la base hasta el valor final\n",
     "    shap.plots.waterfall(shap_values[idx_caso])\n",
     "    \n",
     "else:\n",
-    "    print(\"⚠️ No se encontraron casos de fuga grave (>90%) en la muestra actual.\")"
+    "    print(\"No se encontraron casos de fuga grave (>90%) en la muestra actual.\")"
    ]
   },
   {
